* 20201126 Turn releases back on and add release for v20201024.0 (#13)
* 20201126 --output-file (and -stdout and -stderr) now truncate the output
           file if it already existed.
* 20201126 --port and --local-port should override a port set in --server or
           --local-port.
* 20201222 Add transaction-level tests
* 20201223 Add missing option hints from --proxy-version documentation
* 20201223 Remove documentation note about which Authen::NTLM version to use,
           there's only one on CPAN anymore.
* 20201223 When an unsupported XCLIENT attribute is requested, print the
           missing attribute in the error.
* 20201223 Don't print "Exiting" in the XCLIENT attempted but failed message.
           It is always unnecessary (Auth doesn't print it) and is wrong
           when --xclient-optional is in use.
* 20201223 Fix several --drop-after-send bugs and inconsistencies.
* 20201224 Fix --quit-after/--drop-after/--drop-after-send with XCLIENT
           stop-point when XCLIENT is not negotiated.
* 20201224 Add new stop-point XCLIENT-HELO to address lack of specificity
           when mixing XCLIENT and HELO stop-point.
* 20201224 In --dump output, print a raw proxy string in base64 if version 2
* 20201224 --proxy argument can now (optionally) be provided with the protocol
           prefix.
* 20201224 Allow --proxy to read string from a file, and allow it to be
           base64 encoded.
* 20201224 Change error message when missing --proxy* option to list every
           missing option instead of just the first missing.
* 20201224 --no-hints should also include --no-info-hints, analogous to
           --hide-informational/--hide-all which already worked this way.
* 20201225 Add autocat feature to test tools
* 20201225 Add exit code checking to regression tests
* 20210116 Fix dead link to openssl cipher list format documentation in
           --tls-cipher doc.
* 20210116 Update copyright year to 2021