@@ -18,6 +18,7 @@
  -> STARTTLS
 <-  220 TLS go ahead
 === TLS started with cipher VERSION:CIPHER:BITS
+=== TLS client certificate requested and sent
 === TLS local DN="/C=US/ST=Indiana/O=Swaks Development/CN=unsigned.example.com/emailAddress=proj-swaks@jetmore.net"
 === TLS peer DN="/C=US/ST=Indiana/O=Swaks Development/CN=node.example.com/emailAddress=proj-swaks@jetmore.net"
  ~> EHLO hserver
