@@ -1,5 +1,5 @@
-=== Trying pipe to %TEST_SERVER% --silent --domain pipe   part-0000-connect-standard.txt   part-0101-ehlo-all.txt   part-0200-starttls-basic.txt   part-0105-ehlo-post-tls-info.txt   part-1000-mail-basic.txt   part-1100-rcpt-basic-accept.txt   part-2500-data-accept-basic.txt   part-3000-shutdown-accept.txt   ...
-=== Connected to %TEST_SERVER% --silent --domain pipe   part-0000-connect-standard.txt   part-0101-ehlo-all.txt   part-0200-starttls-basic.txt   part-0105-ehlo-post-tls-info.txt   part-1000-mail-basic.txt   part-1100-rcpt-basic-accept.txt   part-2500-data-accept-basic.txt   part-3000-shutdown-accept.txt   .
+=== Trying pipe to %TEST_SERVER% --silent --domain pipe   part-0000-connect-standard.txt   part-0101-ehlo-all.txt   part-0203-starttls-basic-verify.txt   part-0101-ehlo-all.txt   part-1000-mail-basic.txt   part-1100-rcpt-basic-accept.txt   part-2500-data-accept-basic.txt   part-3000-shutdown-accept.txt   ...
+=== Connected to %TEST_SERVER% --silent --domain pipe   part-0000-connect-standard.txt   part-0101-ehlo-all.txt   part-0203-starttls-basic-verify.txt   part-0101-ehlo-all.txt   part-1000-mail-basic.txt   part-1100-rcpt-basic-accept.txt   part-2500-data-accept-basic.txt   part-3000-shutdown-accept.txt   .
 <-  220 SERVER ESMTP ready
  -> EHLO hserver
 <-  250-SERVER Hello Server [1.1.1.1]
@@ -18,12 +18,12 @@
  -> STARTTLS
 <-  220 TLS go ahead
 === TLS started with cipher VERSION:CIPHER:BITS
-=== TLS client certificate not requested and not sent
-=== TLS no local certificate set
+=== TLS client certificate requested and sent
+=== TLS local DN="/C=US/ST=Indiana/O=Swaks Development/CN=unsigned.example.com/emailAddress=proj-swaks@jetmore.net"
 === TLS peer DN="/C=US/ST=Indiana/O=Swaks Development/CN=node.example.com/emailAddress=proj-swaks@jetmore.net"
  ~> EHLO hserver
 <~  250-SERVER Hello Server [1.1.1.1]
-<~  250-TLS peer DN=No client certificate present
+<~  250-STARTTLS
 <~  250-PIPELINING
 <~  250-XCLIENT ADDR NAME PORT PROTO DESTADDR DESTPORT HELO LOGIN REVERSE_NAME
 <~  250-PRDR
