@@ -2,6 +2,7 @@
 === Connected to 127.0.0.1.
  -> PROXY TCP4 1.1.1.1 2.2.2.2 111 222
 === TLS started with cipher VERSION:CIPHER:BITS
+=== TLS client certificate not requested and not sent
 === TLS no local certificate set
 === TLS peer DN="/C=US/ST=Indiana/O=Swaks Development/CN=node.example.com/emailAddress=proj-swaks@jetmore.net"
 <~  220 SERVER ESMTP ready
